--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -9,6 +8,9 @@
 </head>
 <body>
     <div id="game-container">
+        <div id="sun"></div>
+        <div id="tree1" class="tree"></div>
+        <div id="tree2" class="tree"></div>
         <div id="player1" class="player"></div>
         <div id="player2" class="player"></div>
         <div id="bullet1" class="bullet"></div>
