--- a/index.html
+++ b/index.html
@@ -1,20 +1,26 @@
+
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gun Fight Game</title>
+    <title>Retro Gun Fight Game</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div id="game-container">
-        <div id="sun"></div>
-        <div id="tree1" class="tree"></div>
-        <div id="tree2" class="tree"></div>
+        <div id="score">Score: <span id="player1-score">0</span> - <span id="player2-score">0</span></div>
+        <div id="get-ready">GET READY</div>
         <div id="player1" class="player"></div>
         <div id="player2" class="player"></div>
         <div id="bullet1" class="bullet"></div>
         <div id="bullet2" class="bullet"></div>
+        <div id="tree1" class="tree"></div>
+        <div id="tree2" class="tree"></div>
+        <div id="tree3" class="tree"></div>
+        <div id="tree4" class="tree"></div>
+        <div id="wagon" class="obstacle"></div>
     </div>
     <script src="script.js"></script>
 </body>
