--- a/index.html
+++ b/index.html
@@ -1,5 +1,3 @@
-
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -12,8 +10,8 @@
     <div id="game-container">
         <div id="score">Score: <span id="player1-score">0</span> - <span id="player2-score">0</span></div>
         <div id="get-ready">GET READY</div>
-        <div id="player1" class="player"></div>
-        <div id="player2" class="player"></div>
+        <div id="player1" class="player"><img src="cowboy.png" alt="Player 1"></div>
+        <div id="player2" class="player"><img src="cowboy.png" alt="Player 2"></div>
         <div id="bullet1" class="bullet"></div>
         <div id="bullet2" class="bullet"></div>
         <div id="tree1" class="tree"></div>
