--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <div id="score">Score: <span id="player1-score">0</span> - <span id="player2-score">0</span></div>
         <div id="get-ready">GET READY</div>
         <div id="player1" class="player"><img src="cowboy.png" alt="Player 1"></div>
-        <div id="player2" class="player"><img src="cowboy.png" alt="Player 2"></div>
+        <div id="player2" class="player"><img src="cowboy_inv.png" alt="Player 2"></div>
         <div id="bullet1" class="bullet"></div>
         <div id="bullet2" class="bullet"></div>
         <div id="tree1" class="tree"></div>
