--- a/index.html
+++ b/index.html
@@ -8,12 +8,11 @@
 </head>
 <body>
     <div id="game-container">
+        <div id="sun"></div>
         <div id="score">Score: <span id="player1-score">0</span> - <span id="player2-score">0</span></div>
         <div id="get-ready">GET READY</div>
         <div id="player1" class="player"><img src="cowboy.png" alt="Player 1"></div>
-        <div id="player2" class="player"><img src="cowboy_inv.png" alt="Player 2"></div>
-        <div id="bullet1" class="bullet"></div>
-        <div id="bullet2" class="bullet"></div>
+        <div id="player2" class="player"><img src="cowboy.png" alt="Player 2"></div>
         <div id="tree1" class="tree"></div>
         <div id="tree2" class="tree"></div>
         <div id="tree3" class="tree"></div>
@@ -23,3 +22,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+
