--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div id="score">Score: <span id="player1-score">0</span> - <span id="player2-score">0</span></div>
         <div id="get-ready">GET READY</div>
         <div id="player1" class="player"><img src="images/cowboy.png" alt="Player 1"></div>
-        <div id="player2" class="player"><img src="images/cowboy.png" alt="Player 2"></div>
+        <div id="player2" class="player"><img src="images/cowboy_inv.png" alt="Player 2"></div>
         <div id="tree1" class="tree"></div>
         <div id="tree2" class="tree"></div>
         <div id="tree3" class="tree"></div>
