--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -8,18 +9,17 @@
 </head>
 <body>
     <div id="game-container">
-        <div id="sun"></div>
+        <img id="sun" src="sun.png" alt="Sun">
         <div id="score">Score: <span id="player1-score">0</span> - <span id="player2-score">0</span></div>
         <div id="get-ready">GET READY</div>
-        <div id="player1" class="player"><img src="images/cowboy.png" alt="Player 1"></div>
-        <div id="player2" class="player"><img src="images/cowboy_inv.png" alt="Player 2"></div>
-        <div id="tree1" class="tree"></div>
-        <div id="tree2" class="tree"></div>
-        <div id="tree3" class="tree"></div>
-        <div id="tree4" class="tree"></div>
-        <div id="wagon" class="obstacle"></div>
+        <div id="player1" class="player"><img src="cowboy.png" alt="Player 1"></div>
+        <div id="player2" class="player"><img src="cowboy_inv.png" alt="Player 2"></div>
+        <div id="tree1" class="tree"><img src="tree.png" alt="Tree"></div>
+        <div id="tree2" class="tree"><img src="tree.png" alt="Tree"></div>
+        <div id="tree3" class="tree"><img src="tree.png" alt="Tree"></div>
+        <div id="tree4" class="tree"><img src="tree.png" alt="Tree"></div>
+        <div id="wagon" class="obstacle"><img src="wagon.png" alt="Wagon"></div>
     </div>
     <script src="script.js"></script>
 </body>
 </html>
-
