--- a/index.html
+++ b/index.html
@@ -9,16 +9,16 @@
 </head>
 <body>
     <div id="game-container">
-        <img id="sun" src="sun.png" alt="Sun">
+        <img id="sun" src="images/sun.png" alt="Sun">
         <div id="score">Score: <span id="player1-score">0</span> - <span id="player2-score">0</span></div>
         <div id="get-ready">GET READY</div>
-        <div id="player1" class="player"><img src="cowboy.png" alt="Player 1"></div>
-        <div id="player2" class="player"><img src="cowboy_inv.png" alt="Player 2"></div>
-        <div id="tree1" class="tree"><img src="tree.png" alt="Tree"></div>
-        <div id="tree2" class="tree"><img src="tree.png" alt="Tree"></div>
-        <div id="tree3" class="tree"><img src="tree.png" alt="Tree"></div>
-        <div id="tree4" class="tree"><img src="tree.png" alt="Tree"></div>
-        <div id="wagon" class="obstacle"><img src="wagon.png" alt="Wagon"></div>
+        <div id="player1" class="player"><img src="images/cowboy.png" alt="Player 1"></div>
+        <div id="player2" class="player"><img src="images/cowboy_inv.png" alt="Player 2"></div>
+        <div id="tree1" class="tree"><img src="images/tree.png" alt="Tree"></div>
+        <div id="tree2" class="tree"><img src="images/tree.png" alt="Tree"></div>
+        <div id="tree3" class="tree"><img src="images/tree.png" alt="Tree"></div>
+        <div id="tree4" class="tree"><img src="images/tree.png" alt="Tree"></div>
+        <div id="wagon" class="obstacle"><img src="images/wagon.png" alt="Wagon"></div>
     </div>
     <script src="script.js"></script>
 </body>
