--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -8,16 +10,16 @@
 </head>
 <body>
     <div id="game-container">
-        <img id="sun" src="images/sun.png" alt="Sun">
+        <div id="sun" class="symbol">☀️</div>
         <div id="score">Score: <span id="player1-score">0</span> - <span id="player2-score">0</span></div>
         <div id="get-ready">GET READY</div>
         <div id="player1" class="player"><img src="images/cowboy.png" alt="Player 1"></div>
         <div id="player2" class="player"><img src="images/cowboy_inv.png" alt="Player 2"></div>
-        <div id="tree1" class="tree"><img src="images/tree.png" alt="Tree"></div>
-        <div id="tree2" class="tree"><img src="images/tree.png" alt="Tree"></div>
-        <div id="tree3" class="tree"><img src="images/tree.png" alt="Tree"></div>
-        <div id="tree4" class="tree"><img src="images/tree.png" alt="Tree"></div>
-        <div id="wagon" class="obstacle"><img src="images/wagon.png" alt="Wagon"></div>
+        <div id="tree1" class="tree symbol">🌳</div>
+        <div id="tree2" class="tree symbol">🌳</div>
+        <div id="tree3" class="tree symbol">🌳</div>
+        <div id="tree4" class="tree symbol">🌳</div>
+        <div id="wagon" class="obstacle symbol">🚜</div>
     </div>
     <script src="script.js"></script>
 </body>
