--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
 
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -26,11 +25,9 @@
         <!-- Trees -->
         <div id="tree1" class="tree symbol">🌳</div>
         <div id="tree2" class="tree symbol">🌳</div>
-        <div id="tree3" class="tree symbol">🌳</div>
         
-        <!-- Dogs and squirrels as barriers -->
+        <!-- Dog and squirrel as barriers -->
         <div id="dog1" class="symbol">🐕</div>
-        <div id="dog2" class="symbol">🐕</div>
         <div id="squirrel1" class="symbol">🐿️</div>
     </div>
     
