--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
         <div id="get-ready">GET READY</div>
         
         <!-- Player 1 and Player 2 elements -->
-        <div id="player1" class="player"><img src="images/cowboy.png" alt="Player 1"></div>
-        <div id="player2" class="player"><img src="images/cowboy_inv.png" alt="Player 2"></div>
+        <div id="player1" class="player"><img src="images/Jeff1.png" alt="Player 1"></div>
+        <div id="player2" class="player"><img src="images/Jeff2.png" alt="Player 2"></div>
         
         <!-- Trees -->
         <div id="tree1" class="tree symbol">🌳</div>
