--- a/index.html
+++ b/index.html
@@ -30,9 +30,12 @@
         <div id="dog1" class="symbol">🐕</div>
         <div id="squirrel1" class="symbol">🐿️</div>
     </div>
-
-    <!-- Background music -->
-    <audio id="background-music" src="music/western_theme.mp3" loop></audio>
+    
+    <!-- Audio elements -->
+    <audio id="step-sound" src="sounds/step.mp3"></audio>
+    <audio id="fire-sound" src="sounds/fire.mp3"></audio>
+    <audio id="hit-sound" src="sounds/hit.mp3"></audio>
+    <audio id="background-sound" src="sounds/background.mp3" loop></audio>
     
     <script src="script.js"></script>
 </body>
