--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <audio id="step-sound" src="sounds/step.mp3"></audio>
     <audio id="fire-sound" src="sounds/fire.mp3"></audio>
     <audio id="hit-sound" src="sounds/hit.mp3"></audio>
-    <audio id="background-sound" src="https://josecarlos5.github.io/FrisbeeKiller/sounds/background.mp3" loop></audio>
+    <audio id="background-sound" src="sounds/background.mp3" loop></audio>
     
     <script src="script.js"></script>
 </body>
