--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
         <!-- Dog and squirrel as barriers -->
         <div id="dog1" class="symbol">🐕</div>
         <div id="squirrel1" class="symbol">🐿️</div>
+
+        <!-- Mobile Fire Button -->
+        <button id="fire-button" class="mobile-button">Fire Frisbee</button>
     </div>
     
     <!-- Audio elements -->
@@ -39,6 +42,7 @@
     <audio id="fire-sound" src="sounds/fire.mp3"></audio>
     <audio id="hit-sound" src="sounds/hit.mp3"></audio>
     <audio id="background-sound" src="sounds/background.mp3" loop></audio>
+    <audio id="game-over-sound" src="sounds/gameover.mp3"></audio> <!-- Game Over Music -->
 
     <script src="script.js"></script>
 </body>
